/commit closed branch off h2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Website Project Placeholder</h1>
-  <h2>YOUR NAME HERE: </h2>
+  <h2>YOUR NAME HERE</h2>
   <p>This page exists so GitHub Pages can publish your project.</p>
   <p>You are not expected to edit this file.</p>
 </body>
